--- a/index.html
+++ b/index.html
@@ -1,43 +1,23 @@
-<html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-
-  /* Stuff for the input bar
- input[type=text] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-} */
-input {
-  width: 100%;
-  horizontal-align: middle;
-}
-  
-  
-  
-    </style>
+    <meta charset="utf-8"/> 
+    <title>AI Improviser</title>
   </head>
+
   <body>
-    <h1 style='font-family: Gothic'> Automated Comedy Writer  </h1>
-    
-    <h3 class='Instructions' id='howtouse'> 
-Enter a single word to generate a brief comedic scene (like an improv acting warmup) based on your input using a knowledge base generated using library of comedy scripts. 
-</h3> 
-    <form>
-  <label for="entry"> Enter a single-word prompt:</label>
-  <input type="text" id="fname" name="fname">
-</form>
-    <h1 id='for spacing'> </h1> 
-    <img src="http://www.attackingmartian.com/templates/EXTRAS/happyharry_000b.jpg" alt="Robot" width=100%></img>
-  
-  <p class='Instructions' id='Aboutus'>
-      This project is brought to you by Ryan Callaghan, Jake Daniels, Chloe Mueller, and Jair Rojas, students in Kristian Hammond's EECS 338 class at Northwestern.
-    </p>
-  
+    <h1>
+      Welcome to the AI Improviser.  
+    </h1>
+    <h2>
+      Instructions will go here.
+    </h2>
+
+    <form action="cgi-bin/parser.py" method="post">
+      First Name: <input type="text" name="first_name" placeholder="e.g. Barack" required="required" autofocus />
+      Last Name: <input type="text" name="last_name" placeholder="e.g. Obama" required="required"/>
+      <input type="submit" name="submitprompt" value="Submit"/>
+    </form>
+
   </body>  
+
 </html>
