Rearranging directory structure

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -13,7 +13,7 @@
       Instructions will go here.
     </h2>
 
-    <form class="formBox" action="cgi-bin/parser.py" method="post">
+    <form class="formBox" action="cgi-bin/output.py" method="post">
       Prompt: <input class="inputBox" type="text" name="prompt" placeholder="e.g. Monkey" required="required" autofocus />
       <input class="submitBox" type="submit" name="submitprompt" value="Submit"/>
     </form>
