--- a/server/index.html
+++ b/server/index.html
@@ -6,18 +6,25 @@
   </head>
 
   <body>
-    <h1 class="greetingBox">
-      Welcome to the AI Improviser.  
-    </h1>
-    <h2 class="instructionBox">
-      Instructions will go here.
-    </h2>
+    <div class="container">
+      <h1 class="greetingBox">
+        Welcome to the AI Improviser.  
+      </h1>
 
-    <form class="formBox" action="cgi-bin/output.py" method="post">
-      Prompt: <input class="inputBox" type="text" name="prompt" placeholder="e.g. Monkey" required="required" autofocus />
-      <input class="submitBox" type="submit" name="submitprompt" value="Submit"/>
-    </form>
+      <h2 class="instructionBox">
+        Instructions will go here.
+      </h2>
 
+      <form class="formBox" action="cgi-bin/output.py" method="post">
+        <select name="dropdown" autofocus/>
+          <option value="Animal" selected>Animal</option>
+          <option value="Place">Place</option>
+          <option value="Occupation">Occupation</option>
+        </select>
+        <input class="inputBox" type="text" name="prompt" placeholder="e.g. Monkey" required="required" />
+        <input class="submitBox" type="submit" name="submitprompt" value="Submit"/>
+      </form>
+    <div>
   </body>  
 
 </html>
